--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "fast_dynamic_batcher"
 version = "0.1.1"
 description = "FastDynamicBatcher is a library for batching inputs across requests to accelerate machine learning workloads."
 authors = ["Jeffrey Wigger"]
-readme = "README.md"
+readme = "README.rst"
 license = "MIT"
 repository = "https://github.com/JeffWigger/FastDynamicBatcher"
 homepage = "https://github.com/JeffWigger/FastDynamicBatcher"
