--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,13 +33,6 @@ repos:
   - id: requirements-txt-fixer
   - id: trailing-whitespace
 
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: "v0.4.10"
-  hooks:
-    - id: ruff
-      args: ["--fix", "--show-fixes"]
-    - id: ruff-format
-
 # Checking static types
 # - repo: https://github.com/pre-commit/mirrors-mypy
 #   rev: "v1.10.0"
@@ -52,3 +45,10 @@ repos:
   rev: v1.5.5
   hooks:
   - id: remove-tabs
+
+hooks:
+  - id: ruff
+    entry: ruff check
+    args: ["--fix", "--show-fixes"]
+  - id: ruff-format
+    entry: ruff format
