--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,38 @@
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
+[project]
 name = "fast_dynamic_batcher"
 version = "1.0.1"
 description = "FastDynamicBatcher is a library for batching inputs across requests to accelerate machine learning workloads."
-authors = ["Jeffrey Wigger"]
+authors = [{name = "Jeffrey Wigger"}]
 readme = "README.rst"
 license = "MIT"
+keywords = ["machine-learning", "batching"]
+requires-python = ">=3.9"
+dependencies = []
+
+[project.urls]
 repository = "https://github.com/JeffWigger/FastDynamicBatcher"
 homepage = "https://github.com/JeffWigger/FastDynamicBatcher"
-keywords = ["machine-learning", "batching"]
 
-[tool.poetry.group.dev.dependencies]
-ruff = "~0.4.10"
-mypy = "^1.10.0"
-pytest = "^8.2.2"
-pytest-asyncio = "0.23.7"
-pytest-retry = "^1.6.3"
-asgi-lifespan = "^2.1.0"
-fastapi = "~0.115.3"
-httpx = "^0.27.0"
 
-[tool.poetry.group.test.dependencies]
-torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp312-cp312-linux_x86_64.whl"}
-torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.18.1%2Bcpu-cp312-cp312-linux_x86_64.whl#sha256=e234971d465e8ce481a2718375d9f0797b4381c2d79bb1a546a5f28e26620629"}
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["fast_dynamic_batcher"]
 
-[tool.poetry.dependencies]
-python = ">=3.9"
+[dependency-groups]
+dev = [
+  "ruff ~= 0.11.0",
+  "mypy ~= 1.15.0",
+  "pytest ~= 8.3.5",
+  "pytest-asyncio ~= 0.26.0",
+  "pytest-retry ~= 1.7.0",
+  "asgi-lifespan ~= 2.1.0",
+  "fastapi ~= 0.115.12",
+  "httpx ~= 0.28.1",
+]
+test = [
+    "torch",
+    "torchvision",
+]
 
 [tool.mypy]
 files = "setup.py"
@@ -85,6 +89,10 @@ quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
+
+[tool.uv.sources]
+torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp312-cp312-linux_x86_64.whl" }
+torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.18.1%2Bcpu-cp312-cp312-linux_x86_64.whl" }
 
 [tool.ruff.lint.isort]
 lines-after-imports = 2
