--- a/.github/workflows/test_pip.yaml
+++ b/.github/workflows/test_pip.yaml
@@ -25,10 +25,6 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
-        poetry install --without test --with dev
-    - name: Install Package
-      run: |
-        pip install --verbose .
+        pip install uv
     - name: Test
-      run: poetry run pytest -vv .
+      run: uv run pytest -vv .
