--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install uv
+    - name: Get Version
+      run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+    - name: Set Version
+      env:
+        RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+      run: uvx --from=toml-cli toml set --toml-path=pyproject.toml project.version $VERSION
     - name: Build
       run: uv build
     - name: Publish
