--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,13 +18,14 @@ jobs:
         python-version: "3.12"
     - name: Install Dependencies
       run: |
+        echo "$GITHUB_REF"
         python -m pip install --upgrade pip
         pip install uv
     - name: Get Version
       run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
     - name: Set Version
       env:
-        RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+        VERSION: ${{ steps.vars.outputs.tag }}
       run: uvx --from=toml-cli toml set --toml-path=pyproject.toml project.version $VERSION
     - name: Build
       run: uv build
